# scribble

./: .gitignore  README.md  com.thattonybo.scribble.yml  meson.build
.github/workflows/: main.yml
data/: Application.css  gresource.xml  gschema.xml  meson.build  scribble.desktop.in  scribble.metainfo.xml.in
po/: POTFILES  com.thattonybo.scribble.pot  en.po
src/: Application.vala  Application.vala~  Handler.vala  MainWindow.vala  MainWindow.vala~
src/Widgets/: EditableLabel.vala  NoteRow.vala
src/objects/: Note.vala
src/widgets/: NoteRow.vala
